--- a/Client/ClientApp/src/App.css
+++ b/Client/ClientApp/src/App.css
@@ -1,8 +1,15 @@
 #root {
-  max-width: 1280px;
+  max-width: 95vw;
+  width: 95vw;
   margin: 0 auto;
   padding: 2rem 0;
   text-align: center;
   height: 100vh;
-  width: 90vw;
+}
+
+.search-input{
+  @media screen and (max-width: 575px) {
+    min-width: 100% !important;
+    margin: auto;
+  }
 }
