--- a/Client/ClientApp/src/Components/ProductCard/ProductCard.css
+++ b/Client/ClientApp/src/Components/ProductCard/ProductCard.css
@@ -1,6 +1,12 @@
 .productCard {
-    min-height: 410px;    
+    min-height: 100%;    
 }
+
+.pg-placeholder {
+    min-height: 443.63px;
+    background-color: lightgray !important;
+}
+
 
 .image {
     height: auto;
@@ -9,10 +15,23 @@
     max-height: 200px;
 }
 
+.image-placeholder {
+    width: 100%;
+    max-height: 200px;
+    height: 200px;
+    background-color: lightgray !important;
+}
+
 .font12 {
  font-size: 12px;
 }
 
 .card-title, .card-text {
-    min-height: 55px !important;
+    max-height: 72px !important;
+    min-height: 72px !important;
+}
+
+.card-footer {
+    margin-bottom: 0 !important;
+    margin-top: 1.5rem !important;
 }
